--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.21.3",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/react-loader": "^1.10.7",
+    "@sanity/vision": "^3.57.4",
+    "@sanity/visual-editing": "^2.1.10",
+    "next": "14.2.13",
+    "next-sanity": "^9.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "sanity": "^3.57.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
